fix: More visible score

--- a/public/app/app.css
+++ b/public/app/app.css
@@ -38,7 +38,7 @@ body {
 }
 
 .hourglass {
-    height: 100%;
+    height: 95%;
     text-align: center;
     display: inline-block;
     width: 24%;
@@ -127,5 +127,5 @@ body {
 }
 
 .hourglass .score {
-    font-size: 2em;
+    font-size: 2.5em;
 }
